--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,14 @@ Trunk/[Bb]uilds/
 Trunk/[Ll]ogs/
 Trunk/[Mm]emoryCaptures/
 
+*/[Ll]ibrary/
+*/[Tt]emp/
+*/[Oo]bj/
+*/[Bb]uild/
+*/[Bb]uilds/
+*/[Ll]ogs/
+*/[Mm]emoryCaptures/
+
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
